--- a/index.html
+++ b/index.html
@@ -348,11 +348,11 @@
                                     <!-- item -->
                                     <div class="sub-menu__item">
                                         <!-- heading -->
-                                        <div class="heading-sub js__dropDown d-2xl-flex items-center justify-between px-16 py-8 text-gray-33">
-                                            <h3 class="heading-sub__title fs-17 fw-300">
+                                        <div class="heading-sub d-2xl-flex items-center justify-between px-16 py-8 text-gray-33">
+                                            <a href="#" class="heading-sub__title fs-17 fw-300">
                                                 Movies
-                                            </h3>
-                                            <div class="heading-sub__arrow">
+                                            </a>
+                                            <div class="heading-sub__arrow js__dropDown">
                                                 <img src="./images/icon/polyfon-cyan.svg" alt="">
                                             </div>
                                         </div>
@@ -377,11 +377,11 @@
                                     <!-- item -->
                                     <div class="sub-menu__item">
                                         <!-- heading -->
-                                        <div class="heading-sub js__dropDown d-2xl-flex items-center justify-between px-16 py-8 text-gray-33">
-                                            <h3 class="heading-sub__title fs-17 fw-300">
+                                        <div class="heading-sub d-2xl-flex items-center justify-between px-16 py-8 text-gray-33">
+                                            <a href="#" class="heading-sub__title fs-17 fw-300">
                                                 Movies
-                                            </h3>
-                                            <div class="heading-sub__arrow">
+                                            </a>
+                                            <div class="heading-sub__arrow js__dropDown">
                                                 <img src="./images/icon/polyfon-cyan.svg" alt="">
                                             </div>
                                         </div>
@@ -406,11 +406,11 @@
                                     <!-- item -->
                                     <div class="sub-menu__item">
                                         <!-- heading -->
-                                        <div class="heading-sub js__dropDown d-2xl-flex items-center justify-between px-16 py-8 text-gray-33">
-                                            <h3 class="heading-sub__title fs-17 fw-300">
+                                        <div class="heading-sub d-2xl-flex items-center justify-between px-16 py-8 text-gray-33">
+                                            <a href="#" class="heading-sub__title fs-17 fw-300">
                                                 Movies
-                                            </h3>
-                                            <div class="heading-sub__arrow">
+                                            </a>
+                                            <div class="heading-sub__arrow js__dropDown">
                                                 <img src="./images/icon/polyfon-cyan.svg" alt="">
                                             </div>
                                         </div>
@@ -432,6 +432,7 @@
                                         <!-- end sub menu list -->
                                     </div>
                                     <!-- end item -->
+                                    
                                    
                                 </div>
                                 <!-- end list -->
